2005-09-05  Stepan Kasal  <kasal@ucw.cz>

	* doc/texinfo.tex: Fix typo in a comment.

2005-09-05  Karl Berry  <karl@gnu.org>  (tiny change)

	* util/texi2dvi: look for btxmac.tex's "Undefined citation" message.
	Then texi2dvi works with (e)plain, too, by setting LATEX=tex.
	From Oleg Katsitadze.

2005-08-31  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi: Fix white space issues.
	Quote uses of directory and file names.
	Don't expect "export var=val" to work (e.g., SunOS 5.9): do it in
	two steps.
	($tex_help): Compute it where needed (run_tex), in particular so
	that $tex is defined when used.
	(func_dirname): New.
	($quiet, $verb): Now regular true/false variables.
	(verbose): Adjust.
	(run_tex): When we introduced white space by making absolute file
	names, circumvent TeX's phobia of space in file names by
	introducing a symbolic link.
	(filename_dir): Keep it relative when not $tidy.

2005-08-30  Karl Berry  <karl@gnu.org>

	* makeinfo/xref.c (cm_xref): if the following wrong char is ),
	suggest @pxref.  Suggested by Kevin Ryde, 30 Aug 2005 09:23:39 +1000.

2005-08-17  Predrag Rakic  <pec@uns.ns.ac.yu>

	* doc/txi-sr.tex: Serbian translation.

2005-08-15  Stepan Kasal  <kasal@ucw.cz>

	* doc/texinfo.tex (\normalturnoffactive): Now contains the body of
	\turnoffactive.  Don't explicitly restore the original value of active \
	---just let it be.
	(\turnoffactive): Can now be redefined as \normalturnoffactive
	  \otherbackslash.
	(\atdummies): All calls were followed by \turnoffactive; remove that
	  and add \otherbackslash to the definition, since it already calls
	  \normalturnoffactive indirectly.
	(\xrefX): One of the calls of \refx missed the second parameter;
	  fix that.
	(\commondummiesnofonts): No need to make ~ other for the definition;
	  it contains only \~ now.
	(\backChar, \plusChar, \underChar): Nuke.
	(\colonChar, \commaChar, \dotChar, \exclamChar, \questChar, \semiChar):
	  Move just before the definition of ...